--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <link rel="stylesheet" href="/style.css">
     <title>Fresh Pets</title>
   </head>
   <body>
