--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
@@ -8,7 +9,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="/style.css" />
     <title>Fresh Pets</title>
   </head>
   <body>
